# axl-sh

./: .clang-format  CMakeLists.txt
include/: config.hpp  env.hpp  exec.hpp  parse.hpp
src/: config.cpp  env.cpp  exec.cpp  main.cpp  parse.cpp
